--- a/ads/nativeAd/res/layout/native_ad_medium_layout.xml
+++ b/ads/nativeAd/res/layout/native_ad_medium_layout.xml
@@ -74,7 +74,7 @@
                     <LinearLayout
                         android:id="@+id/headlineView"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="0.5"
                         android:background="@android:color/transparent"
                         android:gravity="start"
@@ -88,10 +88,10 @@
                         <TextView
                             android:id="@+id/headlineTv"
                             android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_margin="0dp"
                             android:lines="1"
-                            android:textColor="#000000"
+                            android:textColor="@color/black"
                             android:textSize="12sp"
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
@@ -106,7 +106,7 @@
                         android:layout_height="0dp"
                         android:layout_marginHorizontal="8dp"
                         android:layout_weight="0.5"
-                        android:gravity="center|start"
+                        android:gravity="start|center_vertical"
                         android:orientation="horizontal"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -117,16 +117,54 @@
                             android:id="@+id/ad_notification_view"
                             android:layout_width="28dp"
                             android:layout_height="22dp"
-                            android:layout_marginEnd="12dp"
                             android:background="@drawable/ad_rounded_corners_shape"
                             android:gravity="center"
                             android:text="Ad"
-                            android:textColor="#000000"
+                            android:textColor="@color/black"
                             android:textSize="11sp"
                             android:textStyle="bold"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="parent" />
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginHorizontal="8dp"
+                            android:orientation="vertical">
+
+                            <TextView
+                                android:id="@+id/advertiserStoreView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:background="@color/white"
+                                android:gravity="top"
+                                android:lines="1"
+                                android:ellipsize="end"
+                                android:textColor="@color/black"
+                                android:textSize="10sp"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toEndOf="@id/ad_notification_view"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                            <TextView
+                                android:id="@+id/priceView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:background="@color/white"
+                                android:gravity="top"
+                                android:lines="1"
+                                android:ellipsize="end"
+                                android:textColor="@color/black"
+                                android:textSize="8sp"
+                                android:textStyle="bold"
+                                app:layout_constraintBottom_toBottomOf="parent"
+                                app:layout_constraintEnd_toEndOf="parent"
+                                app:layout_constraintStart_toEndOf="@id/ad_notification_view"
+                                app:layout_constraintTop_toTopOf="parent" />
+
+                        </LinearLayout>
 
                         <RatingBar
                             android:id="@+id/rating_bar"
@@ -137,7 +175,7 @@
                             android:lines="1"
                             android:numStars="5"
                             android:stepSize="0.1"
-                            android:textColor="#000000"
+                            android:textColor="@color/black"
                             android:textSize="11sp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -145,21 +183,6 @@
                             app:layout_constraintTop_toTopOf="parent">
 
                         </RatingBar>
-
-                        <TextView
-                            android:id="@+id/advertiserStoreView"
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:background="#ffffff"
-                            android:gravity="top"
-                            android:lines="1"
-                            android:ellipsize="end"
-                            android:textColor="#000000"
-                            android:textSize="11sp"
-                            app:layout_constraintBottom_toBottomOf="parent"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toEndOf="@id/ad_notification_view"
-                            app:layout_constraintTop_toTopOf="parent" />
 
                     </LinearLayout>
 
@@ -177,7 +200,7 @@
             android:paddingHorizontal="8dp"
             android:layout_marginTop="4dp"
             android:paddingBottom="4dp"
-            android:textColor="#000000"
+            android:textColor="@color/black"
             android:maxLines="2"
             android:ellipsize="end"
             android:textSize="11sp"
@@ -189,11 +212,10 @@
             android:id="@+id/callToActionBtn"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:layout_marginHorizontal="4dp"
-            android:backgroundTint="#000000"
+            android:backgroundTint="@color/black"
             android:gravity="center"
             android:lines="1"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
